# travian-strat-map

./: .gitignore  Cargo.toml  README.md
src/: main.rs  t5_api.rs  t5_data.rs  tsm_config.rs
