[package]
name = "travian_strat_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datetime = "0.5"
plotters = { version = "0.3", features = ["svg_backend"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["blocking", "json"] }
void = "1.0"